unpackaged/main/default/objects/CMPL123TMS__TMS_Quizzes_Item__c/CMPL123TMS__TMS_Quizzes_Item__c.object-meta.xml
<CustomObject>
    <label>TMS Quizzes Item</label>
    <nameField>
        <displayFormat>TMSQI-{00000}</displayFormat>
        <label>TMS Quizzes Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TMS Quizzes Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>