unpackaged/main/default/objects/CMPL123TMS__TMS_Quizzes_Item__c/fields/CMPL123TMS__Question__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Question.</description>
        <inlineHelpText>Please select a question.</inlineHelpText>
        <label>Question</label>
        <referenceTo>CMPL123TMS__Question__c</referenceTo>
        <relationshipLabel>TMS Quizzes Item</relationshipLabel>
        <relationshipName>TMS_Quizzes_Item</relationshipName>
        <type>Lookup</type>
    </CustomField>