unpackaged/main/default/objects/CMPL123TMS__TMS_Quizzes_Item__c/fields/CMPL123TMS__Sequence__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Sequence__c</fullName>
        <inlineHelpText>Sequence Number</inlineHelpText>
        <label>Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>