unpackaged/main/default/objects/CMPL123TMS__TMS_Quizzes_Item__c/fields/CMPL123TMS__TMS_Quiz_Item_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__TMS_Quiz_Item_Name__c</fullName>
        <description>TMS Quiz Item Name</description>
        <inlineHelpText>TMS Quiz Item Name</inlineHelpText>
        <label>TMS Quiz Item Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>