unpackaged/main/default/objects/CMPL123TMS__TMS_Quizzes_Item__c/fields/CMPL123TMS__TMS_Quizzes__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__TMS_Quizzes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to TMS Quizzes.</description>
        <inlineHelpText>Please select a Quiz.</inlineHelpText>
        <label>TMS Quizzes</label>
        <referenceTo>CMPL123TMS__TMS_Quizzes__c</referenceTo>
        <relationshipLabel>TMS Quizzes Item</relationshipLabel>
        <relationshipName>TMS_Quizzes_Item</relationshipName>
        <type>Lookup</type>
    </CustomField>