unpackaged/main/default/objects/CMPL123TMS__TMS_Quizzes_Item__c/fields/CMPL123TMS__Weights__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Weights__c</fullName>
        <inlineHelpText>Please provide Weights.</inlineHelpText>
        <label>Weights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>